2008-12-08  Vincent Untz  <vuntz@gnome.org>

	* clock.glade: add some inline documentation to the edit location
	window. Fix bug #555468, patch by Dan Winship <danw@gnome.org>.

==================== 2.24.2 ====================

==================== 2.24.1 ====================

2008-10-22  Vincent Untz  <vuntz@gnome.org>

	* clock-location.c: (set_weather_update_timeout): fix build.

2008-10-20  Dan Winship  <danw@gnome.org>

	* clock-location.c (set_weather_update_timeout, etc): if the
	weather update fails because of a network error, try again in 30
	seconds, and then 1 minute, 2 minutes, etc, until it succeeds, or
	we reach the original 30 minute retry time. Makes things work
	better when you connect to a wifi network that requires some sort
	of authentication/terms-of-service-acceptance before the network
	is really functional. (#556776)

==================== 2.24.0 ====================

2008-09-12  Sebastien Bacher  <seb128@ubuntu.com>

	* clock.glade: adapt the adjustement values to the new GTK behaviour
          (bug #551818)

==================== 2.23.92 ====================

==================== 2.23.91 ====================

2008-09-02  Vincent Untz  <vuntz@gnome.org>

	* calendar-window.c: (calendar_day_activated): really open the calendar
	on the right day. Timezones make this harder.
	Patch by Matthias Drochner <M.Drochner@fz-juelich.de>
	Fix bug #372155 again.

2008-09-02  Vincent Untz  <vuntz@gnome.org>

	* clock-location-tile.c: (clock_location_tile_fill): improve tooltip of
	"Set" button
	Fix bug #550087

==================== 2.23.90.1 ====================

==================== 2.23.90 ====================

2008-08-06  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=414458 - When in
	12-hour mode, bringing up the clock window shows the location
	tiles in 24-hour format, but they get updated to 12-hour format at
	the next minute.

	* clock-location-tile.c (clock_location_tile_fill): Don't refresh